# videolm

./: README.md  app.py  packages.txt  requirements.txt
backend/: Dockerfile  fly.toml  pyproject.toml  requirements.txt
backend/app/: main.py
frontend/: .env
frontend/src/: App.tsx
